...
                  style = MaterialTheme.typography.bodyMedium.copy(color = colorScheme.onSurface))
            },
            modifier =
                Modifier.fillMaxWidth()
                    .border(1.dp, colorScheme.onSurface, RoundedCornerShape(10.dp))
                    .heightIn(min = 50.dp)
                    .testTag("title_input_field"),
            colors =
                TextFieldDefaults.colors(
                    focusedContainerColor = colorScheme.surface,
                    unfocusedContainerColor = colorScheme.surface,
                    focusedIndicatorColor = Color.Transparent,
                    unfocusedIndicatorColor = Color.Transparent,
...
              onValueChange = onValueChange,
              placeholder = {
                Text(
                    stringResource(R.string.event_form_description_placeholder),
                    style = MaterialTheme.typography.bodyMedium.copy(color = colorScheme.onSurface))
              },
              modifier = Modifier.fillMaxSize().testTag("description_input_field"),
              colors =
                  TextFieldDefaults.colors(
                      focusedContainerColor = colorScheme.surface,
                      unfocusedContainerColor = colorScheme.surface,
                      focusedIndicatorColor = Color.Transparent,
                      unfocusedIndicatorColor = Color.Transparent,
...
        query = value,
        onQueryChange = onValueChange,
        onLocationSelected = { location -> viewModel.selectLocation(location) },
        results = locationResults,
        isLoading = isSearching,
        modifier = Modifier.fillMaxWidth(),
        testTag = "location_input_field")
  }
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TicketsInputField(
...
                        Text(
                            stringResource(R.string.event_form_price_placeholder),
                            style =
                                MaterialTheme.typography.bodyMedium.copy(
                                    color = colorScheme.onSurface))
                      },
                      modifier = Modifier.fillMaxSize().testTag("price_input_field"),
                      colors =
                          TextFieldDefaults.colors(
                              focusedContainerColor = colorScheme.surface,
                              unfocusedContainerColor = colorScheme.surface,
                              focusedIndicatorColor = Color.Transparent,
                              unfocusedIndicatorColor = Color.Transparent,
...
                        Text(
                            stringResource(R.string.event_form_capacity_placeholder),
                            style =
                                MaterialTheme.typography.bodyMedium.copy(
                                    color = colorScheme.onSurface))
                      },
                      modifier = Modifier.fillMaxSize().testTag("capacity_input_field"),
                      colors =
                          TextFieldDefaults.colors(
                              focusedContainerColor = colorScheme.surface,
                              unfocusedContainerColor = colorScheme.surface,
                              focusedIndicatorColor = Color.Transparent,
                              unfocusedIndicatorColor = Color.Transparent,
...
